--- a/src/main/webapp/WEB-INF/view/welcomePage.html
+++ b/src/main/webapp/WEB-INF/view/welcomePage.html
@@ -10,9 +10,11 @@
 Welcome my friend!
 <br>
 <br>
-
-<a th:href="@{/add}" >Text</a>
-<!--<a hred="@{/users}" th:text = "List of Users">user</a>-->
+What do you want?
+<br>
+<a th:href="@{/add}" >Add New User</a>
+<br>
+<a th:href="@{/users}" >Show List of Users</a>
 
 
 </body>
